# xiaoai-home-assistant

./: .gitignore  Dockerfile  OPTIMIZATION_REPORT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.json  config.json
src/xiaoai_ha_bridge/: main.py
src/xiaoai_ha_bridge/config/: config.py
src/xiaoai_ha_bridge/engine/: interceptor.py  parser.py
src/xiaoai_ha_bridge/ha_client/: client.py
src/xiaoai_ha_bridge/logging/: logger.py
src/xiaoai_ha_bridge/miservice/: poller.py
src/xiaoai_ha_bridge/web/: index.html  routes.py
tests/: test_regressions.py
