[project]
name = "xiaoai-home-assistant"
version = "0.2.3-optimized"
description = "XiaoAI Home Assistant Bridge - 通过小爱音箱语音控制第三方智能家居设备 (已优化适配用户HA环境)"
requires-python = ">=3.8"
authors = [
    { name = "seele", email = "seele@example.com" }
]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
xiaoai-bridge = "xiaoai_ha_bridge.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
httpx = "^0.27.0"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
